--- a/index.html
+++ b/index.html
@@ -6,9 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="icon" 
+    type="image/png" 
+    href="./src/img/favicon-wa.png">
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
+          <link rel="icon" 
+      type="image/png" 
+      href="./src/img/favicon-wa.png">
     <link rel="stylesheet" href="/src/css/style.css">
     <title>WeatherLike App</title>
 </head>
@@ -16,7 +22,7 @@
 <body>
     <div id='search-page'>
         <div class='col-50'>
-            <img src="/src/img/login-bg1.png" alt="sea-seaguls" class="search-img">
+            <img src="/src/img/bg-index-foto.jpg" alt="sea-seaguls" class="search-img">
         </div>
 
         <div class='col-50'>
