--- a/index.html
+++ b/index.html
@@ -6,15 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="icon" 
-    type="image/png" 
-    href="./src/img/favicon-wa.png">
+    <link rel="icon" type="image/png" href="./src/img/favicon-wa.png">
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
-          <link rel="icon" 
-      type="image/png" 
-      href="./src/img/favicon-wa.png">
+    <link rel="icon" type="image/png" href="./src/img/favicon-wa.png">
     <link rel="stylesheet" href="/src/css/style.css">
     <title>WeatherLike App</title>
 </head>
@@ -29,12 +25,56 @@
             <div class='search-content'>
                 <h1>what’s the weather like in ...</h1>
                 <form action="">
-                    <input class="search-input" type="search" name="" id="" placeholder="Search location here">
+                    <input class="search-input" type="text" name="" id="search-input"  value='' placeholder="Search location here">
                     <button class="search-btn" type="submit">Send & discover</button>
                 </form>
             </div>
+
+            <div class="card" id='card'>
+                <div class="card-head">
+                    <h2>This is how the weather looks like in
+                    </h2>
+                </div>
+                <article class="card-body">
+                    <div class="card-body-first--row">
+                        <div class="temperature-result">
+                            <img class="temperature-icon" src="./src/img/sun-cloud.png" alt="sky-icon">
+                            <p  class="temperature-number-wrap" ><span class="temperature-number"></span>°C</p>
+                        </div>
+
+                        <div class="temperature-city">
+                            <p class="city-name">
+                                
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="card-body-second--row">
+                        <div class="min-max-items">
+                            <div class="min-max-item">
+                                <p>min.</p>
+                                <p><span class="min-temp-number"></span>°C</p>
+                            </div>
+                            <div class="min-max-item">
+                                <p>max.</p>
+                                <p><span class="max-temp-number"></span>°C</p>
+                            </div>
+                        </div>
+
+
+                        <div class="humidity-item">
+                            <p>humidity: <span class="humidity-number"></span>%</p>
+                        </div>
+                    </div>
+
+            </div>
+            </article>
         </div>
     </div>
+    </div>
+
+    <script src="script.js"></script>
+
 </body>
 
 </html>
