temperature returning right

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                     <div class="card-body-first--row">
                         <div class="temperature-result">
                             <img class="temperature-icon" src="./src/img/sun-cloud.png" alt="sky-icon">
+                            <i class='icon'></i>
                             <p  class="temperature-number-wrap" ><span class="temperature-number"></span>°C</p>
                         </div>
 
