responsive layout and fetching new icons

--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
                 <article class="card-body">
                     <div class="card-body-first--row">
                         <div class="temperature-result">
-                            <img class="temperature-icon" src="./src/img/sun-cloud.png" alt="sky-icon">
-                            <i class='icon'></i>
+                            <img class="temperature-icon" src="" alt="sky-icon">
                             <p  class="temperature-number-wrap" ><span class="temperature-number"></span>°C</p>
                         </div>
 
